// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package DO_and_QU;

// The greeting service definition.
service DOQU_Greeter {
  rpc PublicKey (PublicKeyRequest) returns (ParameterReply) {}
}

// QU向DO发送公钥
message PublicKeyRequest {
  string publicKey = 1;
}

// DO向QU发送加密的希尔伯特曲线参数（vector<string>）
message ParameterReply {
  repeated bytes parameter = 1;
  string conversionKey = 2;
  string publicKey = 3;
}